--- a/app/src/main/res/layout/activity_avtorization.xml
+++ b/app/src/main/res/layout/activity_avtorization.xml
@@ -101,6 +101,7 @@
         android:layout_marginTop="25dp"
         android:backgroundTint="#997C9A92"
         android:text="Профиль"
+        android:onClick="onClickLoginProf"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Registr" />
