--- a/app/src/main/res/layout/activity_icon_mask.xml
+++ b/app/src/main/res/layout/activity_icon_mask.xml
@@ -2,48 +2,47 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="120dp"
+    android:layout_height="125dp"
     tools:context=".Icon_mask">
 
     <RelativeLayout
 
-    android:id="@+id/Icon_fon"
-    android:layout_width="75dp"
-    android:layout_height="75dp"
-    android:layout_marginStart="20dp"
-    android:layout_marginTop="10dp"
-    android:layout_marginEnd="20dp"
-    android:background="@drawable/iconfon"
-    android:gravity="center|center_horizontal"
-    app:layout_constraintBottom_toTopOf="@+id/Icon_Text"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent">
+        android:id="@+id/Icon_fon"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/iconfon"
+        android:gravity="center|center_horizontal"
+        app:layout_constraintBottom_toTopOf="@+id/Icon_Text"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints">
 
-    <ImageView
-    android:id="@+id/Icon_Image"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_alignParentStart="true"
-    android:layout_alignParentTop="true"
-    android:layout_alignParentEnd="true"
-    android:layout_alignParentBottom="true"
-    android:layout_marginStart="15dp"
-    android:layout_marginTop="15dp"
-    android:layout_marginEnd="15dp"
-    android:layout_marginBottom="15dp"></ImageView>
+        <ImageView
+            android:id="@+id/Icon_Image"
+            android:layout_width="48dp"
+            android:layout_height="53dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginEnd="12dp"
+            android:layout_marginBottom="7dp"></ImageView>
     </RelativeLayout>
 
     <TextView
-    android:id="@+id/Icon_Text"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="10dp"
-    android:gravity="center_horizontal"
-    android:text="Спокойный"
-    android:textColor="@color/white"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/Icon_fon"></TextView>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        android:id="@+id/Icon_Text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:gravity="center_horizontal"
+        android:text="Спокойный"
+        android:textColor="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Icon_fon"></TextView>
+</androidx.constraintlayout.widget.ConstraintLayout>
