--- a/app/src/main/res/layout/activity_mask_glavn.xml
+++ b/app/src/main/res/layout/activity_mask_glavn.xml
@@ -3,13 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="1000dp"
     tools:context=".Mask_glavn">
+
     <RelativeLayout
 
         android:id="@+id/Horiz_fon"
-        android:layout_width="match_parent"
-        android:layout_height="154dp"
+        android:layout_width="384dp"
+        android:layout_height="176dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
@@ -62,13 +63,13 @@
 
         <Button
             android:id="@+id/Podrobnee"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="203dp"
+            android:layout_height="58dp"
             android:layout_below="@+id/OpisanieM"
             android:layout_alignParentStart="true"
             android:layout_alignParentBottom="true"
-            android:layout_marginStart="15dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="30dp"
             android:layout_marginEnd="15dp"
             android:layout_marginBottom="10dp"
             android:layout_toStartOf="@+id/ImageM"
